Section About-Us

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                         <div class="icon">
                             <i class="fa-solid fa-compass-drafting"></i>
                         </div>
-                        <h2>Clean Code</h2>
+                        <h2>Web Design</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis impedit laboriosam omnis dolore neque natus inventore totam ad dolor nam. Qui illo cupiditate hic! Vitae est tempora vel mollitia ullam?</p>
                     </div>
                     <div class="col">
                         <div class="icon">
                             <i class="fa-solid fa-laptop-code"></i>
                         </div>
-                        <h2>Clean Code</h2>
+                        <h2>Developemnt</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis impedit laboriosam omnis dolore neque natus inventore totam ad dolor nam. Qui illo cupiditate hic! Vitae est tempora vel mollitia ullam?</p>
                     </div>
                     <div class="col">
                         <div class="icon">
                             <i class="fa-sharp fa-solid fa-bullhorn"></i>
                         </div>
-                        <h2>Clean Code</h2>
+                        <h2>Branding</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis impedit laboriosam omnis dolore neque natus inventore totam ad dolor nam. Qui illo cupiditate hic! Vitae est tempora vel mollitia ullam?</p>
                     </div>
                 </div>
