Section Strategic Planning

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
     <main>
         <div class="container">
+            <!-- Section About Us -->
             <section class="about-us">
                 <div class="row">
                     <div class="big-col">
@@ -71,6 +72,32 @@
                 </div>
             </section>
         </div>
+
+        <!-- Section Information -->
+        <section class="information">
+            <div class="container">
+                <div class="row">
+                    <div class="large-col">
+                        <img src="img/planning1.png" alt="planning1">
+                        <div class="large-col-content">
+                            <h2>Strategic Planning</h2>
+                            <p>
+                                Egestas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc. Habitasse platea
+                                dictumst quisque sagittis. Interdum velit euismod in pellentesque massa placerat duis. Quis viverra nibh cras pulvinar mattis.</p>
+                        </div>
+                    </div>
+                    <div class="small-col">
+                        <div class="small-col-content">
+                            <img src="img/planning2.png" alt="planning2">
+                            <h2>App Developemnt</h2>
+                            <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                                <a class="btn-violet" href="#"><i class="fa-solid fa-arrow-down"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
 
     </main>
