--- a/index.html
+++ b/index.html
@@ -89,15 +89,62 @@
                     <div class="small-col">
                         <div class="small-col-content">
                             <img src="img/planning2.png" alt="planning2">
-                            <h2>App Developemnt</h2>
+                            <h2>App Developement</h2>
                             <p>Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
                                 <a class="btn-violet" href="#"><i class="fa-solid fa-arrow-down"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
-
         </section>
+
+        <!-- Section Testimonials -->
+        <section class="testimonials">
+            <div class="container">
+                <div class="row">
+                    <div class="col-title">
+                        <h3>TESTIMONIALS</h3>
+                        <h2>We are committed expert partners</h2>
+                        <p>We place huge valus on strong relationships and have seen the benefit they bring to out business. Customer feedback is vital in helping us to get it right.</p>
+                    </div>
+                    <div class="col">
+                        <div class="testimonial">
+                            <div class="img-circle">
+                                <img src="img/testimonial1.jpg" alt="testimonial1">
+                            </div>
+                            <div class="testimonial-content">
+                                <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, odio quas asperiores consequuntur voluptas nihil, adipisci quos illum saepe perferendis similique suscipit fugiat officia molestias, animi dolores eveniet dolore tempore. <i class="fa-solid fa-quote-left"></i></p>
+                                <h2>NAT REYNOLDS</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="testimonial">
+                            <div class="img-circle">
+                                <img src="img/testimonial2.jpg" alt="testimonial2">
+                            </div>
+                            <div class="testimonial-content">
+                                <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, odio quas asperiores consequuntur voluptas nihil, adipisci quos illum saepe perferendis similique suscipit fugiat officia molestias, animi dolores eveniet dolore tempore. <i class="fa-solid fa-quote-left"></i></p>
+                                <h2>CELIA ALMEDA</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="testimonial">
+                            <div class="img-circle">
+                                <img src="img/testimonial3.jpg" alt="testimonial3">
+                            </div>
+                            <div class="testimonial-content">
+                                <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, odio quas asperiores consequuntur voluptas nihil, adipisci quos illum saepe perferendis similique suscipit fugiat officia molestias, animi dolores eveniet dolore tempore. <i class="fa-solid fa-quote-left"></i></p>
+                                <h2>BOB ROBERTS</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
 
     </main>
