--- a/index.html
+++ b/index.html
@@ -143,6 +143,68 @@
                 </div>
             </div>
         </section>
+        <!-- Section Benefits -->
+        <section class="benefits">
+            <div class="container">
+                <div class="row-title"><h2>Benefits of working with us</h2></div>
+                <div class="row">
+                    <div class="col">
+                        <div class="benefits-content">
+                            <h2 class="number-card">01</h2>
+                            <h2>High Quality</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quod tenetur libero numquam voluptate, expedita quo harum eligendi dolor illo facere iusto. Consequatur nemo, ea rem quod ut id quam?</p>
+                            <a class="btn-violet" href="#">More</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="benefits-content">
+                            <h2 class="number-card">02</h2>
+                            <h2>Creative Team</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quod tenetur libero numquam voluptate, expedita quo harum eligendi dolor illo facere iusto. Consequatur nemo, ea rem quod ut id quam?</p>
+                            <a class="btn-violet" href="#">More</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="benefits-content">
+                            <h2 class="number-card">03</h2>
+                            <h2>Amazing Results</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quod tenetur libero numquam voluptate, expedita quo harum eligendi dolor illo facere iusto. Consequatur nemo, ea rem quod ut id quam?</p>
+                            <a class="btn-violet" href="#">More</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="benefits-content">
+                            <h2 class="number-card">04</h2>
+                            <h2>Best Pricing</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quod tenetur libero numquam voluptate, expedita quo harum eligendi dolor illo facere iusto. Consequatur nemo, ea rem quod ut id quam?</p>
+                            <a class="btn-violet" href="#">More</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="benefits-content">
+                            <h2 class="number-card">05</h2>
+                            <h2>Innovations</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quod tenetur libero numquam voluptate, expedita quo harum eligendi dolor illo facere iusto. Consequatur nemo, ea rem quod ut id quam?</p>
+                            <a class="btn-violet" href="#">More</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="benefits-content">
+                            <h2 class="number-card">06</h2>
+                            <h2>24/7 Support</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quod tenetur libero numquam voluptate, expedita quo harum eligendi dolor illo facere iusto. Consequatur nemo, ea rem quod ut id quam?</p>
+                            <a class="btn-violet" href="#">More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-us">
+
+
+        </section>
+
 
 
 
