--- a/index.html
+++ b/index.html
@@ -200,17 +200,27 @@
             </div>
         </section>
 
-        <section class="about-us">
-
-
+        <section class="our-team">
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
         </section>
-
-
-
-
+        <section class="start-service"></section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="row">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident unde temporibus eligendi natus fuga.</p>
+                <div class="links">
+                    <a href="#">Lorem ipsum</a><p>scelerisque mauris pellentesque</p><a href="#">Boolean carrers</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
