--- a/index.html
+++ b/index.html
@@ -199,16 +199,43 @@
                 </div>
             </div>
         </section>
-
+        <!-- Section Our Team -->
         <section class="our-team">
             <div class="container">
                 <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
+                    <div class="large-col">
+                        <h2>About Us</h2>
+                        <p>Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Ouam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis. </p>
+                        <p>Ouis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu fells bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim. the text box. Click again or double click to start editing the text. </p>
+
+                    </div>
+                    <div class="small-col">
+                        <div class="img-circle">
+                            <img src="img/about.jpg" alt="testimonial4">
+                        </div>
+                        <p>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</p>
+                        <a class="btn-violet" href="#"><i class="fa-brands fa-linkedin"></i>Find me on linkedin</a>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="start-service"></section>
+        <!-- Section Start Service -->
+        <section class="start-service">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h3>GET STARTED</h3>
+                        <h2>Simple, Trasparent Pricing</h2>
+                        <div class="title-free">
+                            <h2>It's Free!</h2>
+                            <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.</p>
+                            <a class="btn-violet" href="#"></a>
+                            <h4>Copyright 2021 Boolean Classe XX <a href="#">Privacy policy</a></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
