--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <nav class="navigation-menu">
             <div class="logo"><img src="img/logo.png" alt="logo"></div>
             <div class="Information">
+                <div class="button-menu">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
                 <ul>
                     <li><a href="#">Planning</a></li>
                     <li><a href="#">Testimonials</a></li>
