Responsive layout tablet and mobile

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="col-title">
                         <h3>TESTIMONIALS</h3>
                         <h2>We are committed expert partners</h2>
-                        <p>We place huge valus on strong relationships and have seen the benefit they bring to out business. Customer feedback is vital in helping us to get it right.</p>
+                        <p>We place huge value on strong relationships and have seen the benefit they bring to out business. Customer feedback is vital in helping us to get it right.</p>
                     </div>
                     <div class="col">
                         <div class="testimonial">
